// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component allows full-width mode 1`] = `
<div>
  <div
    class="Container Container--full-width"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Container component allows wrapper className 1`] = `
<div>
  <div
    class="Container wrapper-className"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Container component renders correctly 1`] = `
<div>
  <div
    class="Container"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      Content
    </div>
  </div>
</div>
`;
